--- a/project/authorization_code/public/index.html
+++ b/project/authorization_code/public/index.html
@@ -61,12 +61,12 @@
         <div class="media-body">
           <dl class="dl-horizontal">
             <dt>Display name</dt><dd class="clearfix">{{display_name}}</dd>
-            <dt>Id</dt><dd>{{id}}</dd>
-            <dt>Email</dt><dd>{{email}}</dd>
+            <!-- <dt>Id</dt><dd>{{id}}</dd> -->
+            <!-- <dt>Email</dt><dd>{{email}}</dd> -->
             <dt>Spotify URI</dt><dd><a href="{{external_urls.spotify}}">{{external_urls.spotify}}</a></dd>
-            <dt>Link</dt><dd><a href="{{href}}">{{href}}</a></dd>
-            <dt>Profile Image</dt><dd class="clearfix"><a href="{{images.0.url}}">{{images.0.url}}</a></dd>
-            <dt>Country</dt><dd>{{country}}</dd>
+            <!-- <dt>Link</dt><dd><a href="{{href}}">{{href}}</a></dd> -->
+            <!-- <dt>Profile Image</dt><dd class="clearfix"><a href="{{images.0.url}}">{{images.0.url}}</a></dd>
+            <dt>Country</dt><dd>{{country}}</dd> -->
           </dl>
         </div>
       </div>
