--- a/project/authorization_code/public/index.html
+++ b/project/authorization_code/public/index.html
@@ -31,7 +31,7 @@
         </div>
         <div id="oauth">
         </div>
-        <button class="btn btn-default" id="obtain-new-token">Obtain new token using the refresh token</button>
+        <!-- <button class="btn btn-default" id="obtain-new-token">Obtain new token using the refresh token</button> -->
         <a href="/login" class="btn btn-primary">Log out</a>
       </div>
     </div>
@@ -63,7 +63,7 @@
             <!-- <dt>Display name</dt><dd class="clearfix">{{display_name}}</dd> -->
             <!-- <dt>Id</dt><dd>{{id}}</dd> -->
             <!-- <dt>Email</dt><dd>{{email}}</dd> -->
-            <dt>Spotify URI</dt><dd><a href="{{external_urls.spotify}}">{{external_urls.spotify}}</a></dd>
+            <!-- <dt>Spotify URI</dt><dd><a href="{{external_urls.spotify}}">{{external_urls.spotify}}</a></dd> -->
             <!-- <dt>Link</dt><dd><a href="{{href}}">{{href}}</a></dd> -->
             <!-- <dt>Profile Image</dt><dd class="clearfix"><a href="{{images.0.url}}">{{images.0.url}}</a></dd>
             <dt>Country</dt><dd>{{country}}</dd> -->
@@ -73,11 +73,11 @@
     </script>
 
     <script id="oauth-template" type="text/x-handlebars-template">
-      <h2>oAuth info</h2>
+      <!-- <h2>oAuth info</h2>
       <dl class="dl-horizontal">
         <dt>Access token</dt><dd class="text-overflow">{{access_token}}</dd>
         <dt>Refresh token</dt><dd class="text-overflow">{{refresh_token}}></dd>
-      </dl>
+      </dl> -->
     </script>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
