Fixed login(kinda). Still lots to fix.

--- a/project/authorization_code/public/index.html
+++ b/project/authorization_code/public/index.html
@@ -31,7 +31,7 @@
 <div ng-app="myApp" ng-controller="myCtrl">
 
 <div>
-  <script src="js/controllers/searchController.js"></script>
+   <script src="js/controllers/searchController.js"></script>
    <body class="landing">
 
    <div id="loggedin">
@@ -87,9 +87,12 @@
 
     <h2>Spotify Enhancer</h2>
     <p>Discover new music | Expand your personal library</p>
+    <div id="welcomeuser">
+    </div>
+
 
     <script id="user-profile-template" type="text/x-handlebars-template">
-      <h1>Welcome, {{display_name}}</h1>
+      <h1 style="color:white; margin-top:30px">Welcome, {{display_name}}</h1>
     </script>
 
 
@@ -120,9 +123,20 @@
       Track: {{t.name}} by {{t.artists[0].name}} <br>
       <a href={{t.uri}}> <img src="../../images/spotify-link.png" width="25px" height="25px"> </a>
       <a target="_blank" href={{t.external_urls.spotify}}> <img src="../../images/browser-link.png" width="25px" height="25px"> </a>
-      <a ng-click="getSimilar(t.name, t.artists[0].name)"> <img src="../../images/similar-link.png" width="25px" height="25px"> </a>
+      <a class="popup" onclick="myFunction({{t.mbid}})" ng-click="getSimilar(t.name, t.artists[0].name)"> <img src="../../images/similar-link.png" width="25px" height="25px">
+        <span class="popuptext" id="myPopup" +{{t.mbid}}>{{similar_response.name}}</span>
+      </a>
     </div>
   </div>
+
+
+<script>
+// When the user clicks on div, open the popup
+function myFunction(id) {
+    var popup = document.getElementById('myPopup' + id);
+    popup.classList.toggle('show');
+}
+</script>
 
 
 
@@ -243,7 +257,7 @@
 
         var userProfileSource = document.getElementById('user-profile-template').innerHTML,
             userProfileTemplate = Handlebars.compile(userProfileSource),
-            userProfilePlaceholder = document.getElementById('user-profile');
+            userProfilePlaceholder = document.getElementById('welcomeuser');
 
         var oauthSource = document.getElementById('oauth-template').innerHTML,
             oauthTemplate = Handlebars.compile(oauthSource); //,
