Fixed homepage text

--- a/project/authorization_code/public/index.html
+++ b/project/authorization_code/public/index.html
@@ -146,21 +146,21 @@ function myFunction(id) {
 <section id="one" class="wrapper style1 align-center">
     <div class="container">
        <header>
-          <h2>Consectetur adipisicing elit</h2>
-          <p>Lorem ipsum dolor sit amet adipisicing elit. Delectus consequatur sed tempus.</p>
+          <h2>What can you do here?</h2>
+          <p>Check out these features to effortlessly add new music to your Spotify playlists</p>
       </header>
       <div class="row 200%">
           <section class="4u 12u$(small)">
-             <i class="icon big rounded fa-clock-o"></i>
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim quam consectetur quibusdam magni minus aut modi aliquid.</p>
+             <i class="icon big rounded fa-spotify"></i>
+             <p>Conveniently access your Spotify playlists by connecting your account to the Spotify Enhancer</p>
          </section>
          <section class="4u 12u$(small)">
-             <i class="icon big rounded fa-comments"></i>
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium ullam consequatur repellat debitis maxime molestiae.</p>
+             <i class="icon big rounded fa-search"></i>
+             <p>Quickly find new music based on songs and artists in your current playlists</p>
          </section>
          <section class="4u$ 12u$(small)">
-             <i class="icon big rounded fa-user"></i>
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque eaque eveniet, nesciunt molestias. Ipsam, voluptate vero.</p>
+             <i class="icon big rounded fa-play-circle"></i>
+             <p>Listen to your new playlists and easily export your new playlist back to Spotify</p>
          </section>
      </div>
  </div>
@@ -171,23 +171,23 @@ function myFunction(id) {
     <div class="container">
        <div class="row">
           <section class="4u 6u(medium) 12u$(small)">
-             <h3>Lorem ipsum</h3>
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, cumque!</p>
+             <h3>Reviews</h3>
+             <p>Check out these reviews of Spotify!</p>
              <ul class="alt">
-                <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
-                <li><a href="#">Quod adipisci perferendis et itaque.</a></li>
-                <li><a href="#">Itaque eveniet ullam, veritatis reiciendis?</a></li>
-                <li><a href="#">Accusantium repellat accusamus a, soluta.</a></li>
+                <li><a target="_blank" href="http://www.pcmag.com/article2/0,2817,2366868,00.asp">"Spotify is better than ever" - PCMag</a></li>
+                <li><a target="_blank" href="https://www.cnet.com/products/spotify/review/">"Spotify is the king of streaming music" - CNET</a></li>
+                <li><a target="_blank" href="http://www.techradar.com/reviews/pc-mac/software/utilities/other-software/spotify-526289/review">"Our favourite music streaming service by a mile" - TechRadar</a></li>
+                <li><a target="_blank" href="http://www.digitaltrends.com/music/apple-music-vs-spotify/">"The undisputed king of on-demand streaming music" - Digital Trends</a></li>
             </ul>
         </section>
         <section class="4u 6u$(medium) 12u$(small)">
-         <h3>Nostrum, repellat!</h3>
-         <p>Tenetur voluptate exercitationem eius tempora! Obcaecati suscipit, soluta earum blanditiis.</p>
+         <h3>Testimonials</h3>
+         <p>See what our satisfied customers had to say about Spotify Enhancer</p>
          <ul class="alt">
-            <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
-            <li><a href="#">Id inventore, qui necessitatibus sunt.</a></li>
-            <li><a href="#">Deleniti eum odit nostrum eveniet.</a></li>
-            <li><a href="#">Illum consectetur quibusdam eos corporis.</a></li>
+            <li><a target="_blank" href="https://www.instagram.com/p/BA8V2QXGkewcVA2qdlBBL7YB6iHCI1RxNxRtnE0/?taken-by=ethniclightning">"I've been waiting for this day" - Joseph Cho</a></li>
+            <li><a target="_blank" href="https://www.instagram.com/p/BAln2EEGkfgEQJYQPa-kBSYEcugB5XITIZ1YSw0/?taken-by=ethniclightning">"I was impressed" - Joseph Cho</a></li>
+            <li><a target="_blank" href="https://www.instagram.com/p/BFkXuSemkffzfvRDMYcGQa7Z9vymkOM_cVAJM00/?taken-by=ethniclightning">"You can't fool me" - Joseph Cho</a></li>
+            <li><a target="_blank" href="https://www.instagram.com/p/--d906mkYcNDWr4YPK31s892sJmxpcvVTsHOY0/?taken-by=ethniclightning">"Stokedd" - Joseph Cho</a></li>
         </ul>
     </section>
     <section class="4u$ 12u$(medium) 12u$(small)">
@@ -202,12 +202,12 @@ function myFunction(id) {
     <ul class="tabular">
         <li>
            <h3>Address</h3>
-           1234 Somewhere Road<br>
-           Nashville, TN 00000
+           726 Commonwealth Ave<br>
+           Boston, MA 02215
        </li>
        <li>
            <h3>Mail</h3>
-           <a href="#">someone@untitled.tld</a>
+           <a href="#">info@spotifyenhance.com</a>
        </li>
        <li>
            <h3>Phone</h3>
