--- a/project/authorization_code/public/index.html
+++ b/project/authorization_code/public/index.html
@@ -25,6 +25,17 @@
      <link rel="stylesheet" href="css/style.css" />
      <link rel="stylesheet" href="css/style-xlarge.css" />
  </noscript>
+
+  <SCRIPT TYPE="text/javascript">
+  function popup(mylink, windowname) {
+    if (! window.focus)return true;
+    var href = 'similartracks.html';
+    if (typeof(mylink) == 'string') href='similartracks.html';
+    else href='similartracks.html'; 
+    window.open(href, windowname, 'width=400,height=200,scrollbars=yes'); 
+    return false; 
+  }
+  </SCRIPT>
  <!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 </head>
 
@@ -125,8 +136,17 @@
       Track: {{t.name}} by {{t.artists[0].name}} <br>
       <a href={{t.uri}}> <img src="../../images/spotify-link.png" width="25px" height="25px"> </a>
       <a target="_blank" href={{t.external_urls.spotify}}> <img src="../../images/browser-link.png" width="25px" height="25px"> </a>
-      <a ng-click="myFunction(); getSimilar(t.name, t.artists[0].name)"> <img src="../../images/similar-link.png" width="25px" height="25px"></a>
-      <div ng-attr-id="{{ t.mbid }}" class="similarsong"></div>
+      <form method="link" action="similartracks.html" target="_blank">
+        <input type="hidden" value="{{t.name}}" name="track_name">
+        <input type="hidden" value="{{t.artists[0].name}}" name="artist_name">
+        <input type="image" src="../../images/similar-link.png" alt="submit" width="25px" height="25px">
+      </form>
+     <!--  <a ng-click="myFunction(); getSimilar(t.name, t.artists[0].name)"> <img src="../../images/similar-link.png" width="25px" height="25px"></a> -->
+     <!--  <a href="similartracks.html" ng-click="getSimilar(t.name, t.artists[0].name)" onClick="return popup('similartracks.html', 'notes')"> <img src="../../images/similar-link.png" width="25px" height="25px"> </a>
+      -->
+
+      <!-- jackies stuff -->
+      
       
     </div>
   </div>
