--- a/project/authorization_code/public/similartracks.html
+++ b/project/authorization_code/public/similartracks.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 
+
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 <script src="js/controllers/searchController.js"></script>
 <script src="//code.angularjs.org/snapshot/angular-animate.js"></script>
 
+<noscript>
+    <link rel="stylesheet" href="css/skel.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style-xlarge.css" />
+</noscript>
 
 <div ng-app="myApp" ng-controller="myCtrl">
 
