--- a/project/authorization_code/public/index.html
+++ b/project/authorization_code/public/index.html
@@ -64,7 +64,7 @@
           <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="">About</a></li>
-              <li><a href="">Elements</a></li>
+              <li><a href="recentsearch.html">Recent Search</a></li>
               <li><a href="index.html">Log Out</a></li>
           </ul>
         </nav>
