redid similar songs page, fixed search bar toggle bug

--- a/project/authorization_code/public/index.html
+++ b/project/authorization_code/public/index.html
@@ -123,7 +123,7 @@
 
 <div class="jsonResponse">
 
-<h2 ng-hide="toggle">Artists</h2>
+<h2 ng-hide="hideHeaders">Artists</h2>
 
 <div class="jsonResponse_artist" ng-repeat="a in artists">
     <!-- {{userInput}} -->
@@ -135,7 +135,7 @@
 
 </div>
 
-<h2 ng-hide="toggle">Tracks</h2>
+<h2 ng-hide="hideHeaders">Tracks</h2>
 
   <div class="jsonResponse_tracks" ng-repeat="t in tracks">
     <div>
