--- a/project/authorization_code/public/similartracks.html
+++ b/project/authorization_code/public/similartracks.html
@@ -16,7 +16,7 @@
 <script src="js/controllers/similartrackCtrl.js"></script>
 
 <body>
-	<h1 id="fmresult"></h1>
+	<h1 id="fmresult"></div>
 </body>
 
 </div>
