--- a/project/authorization_code/public/index.html
+++ b/project/authorization_code/public/index.html
@@ -63,7 +63,7 @@
         <nav id="nav">
           <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="">About</a></li>
+              <li><a href="about.html">About</a></li>
               <li><a href="recentsearch.html">Recent Search</a></li>
               <li><a href="index.html">Log Out</a></li>
           </ul>
