--- a/project/authorization_code/public/about.html
+++ b/project/authorization_code/public/about.html
@@ -83,21 +83,21 @@
       <div class="row">
           <section class="6u 12u$(small)" style="margin-bottom: 10px">
              <i class="icon big rounded fa-fighter-jet"></i>
-             <p>Joe is a fourth year at Boston University who is going to be making bank right after college graduation. He likes to spend time with his cat after his classes and sometimes even meows with it. His favorite food is mac & cheese and usually spends his free time dreaming about being tied up to a tree.</p>
+             <p>Joe is a fourth year at Boston University who is going to be making bank right after college graduation. He likes to spend time with his cat after his classes and sometimes even meows with it. His favorite food is mac & cheese and he usually spends his free time dreaming about being tied up to a tree.</p>
          </section>
          <section class="6u 12u$(small)" style="margin-bottom: 10px">
              <i class="icon big rounded fa-bullhorn"></i>
-             <p>Cullen is also a senior at Boston University who travels everywhere with his Bose headphones. He enjoys tuning everyone out and loves time to himself and his music. His favorite genre are rap as well as hip & hop and thinks mainstream EDM dominate the music industry right now. Sometimes, he will walk down Comm ave and see Joe attempt to tie himself to a tree.</p>
+             <p>Cullen is also a senior at Boston University who travels everywhere with his Bose headphones. He enjoys tuning everyone out and loves time to himself and his music. His favorite genres are rap as well as hip & hop and thinks mainstream EDM dominates the music industry right now. Sometimes, he will walk down Comm Ave and see Joe attempt to tie himself to a tree.</p>
          </section>
       </div>
       <div class="row">
          <section class="6u 12u$(small)" style="margin-bottom: 10px">
              <i class="icon big rounded fa-car"></i>
-             <p>Just like everyone else so far, Spencer is also a fourth year at Boston University. He excels at everything computer related, from intense video gaming to coding. He is a master at making html pages as well as choosing fonts that describe people’s personality. Unfortunately for him, he never got a chance to see Joe tie himself to a tree.</p>
+             <p>Just like everyone else so far, Spencer is also a fourth year at Boston University. He excels at everything computer related, from intense video gaming to coding. He is a master at making html pages as well as choosing fonts that describe people’s personalities. Unfortunately for him, he never got a chance to see Joe tie himself to a tree.</p>
          </section>
          <section class="6u 12u$(small)" style="margin-bottom: 10px">
              <i class="icon big rounded fa-exclamation-triangle"></i>
-             <p>Steven is the only business student in this group, studying Finance and Information Systems. He rarely has clue about what the others are talking about when they start speaking code. He has a pet bunny that he really misses back home and sometimes wish he can just become a potato. Unlike Spencer, he was fortunate enough to witness Joe tie himself to a tree once, and dreamt about getting that opportunity again ever since.</p>
+             <p>Steven is the only business student in this group, studying Finance and Information Systems. He rarely has a clue about what the others are talking about when they start speaking code. He has a pet bunny that he really misses back home and sometimes wishes he can just become a potato. Unlike Spencer, he was fortunate enough to witness Joe tie himself to a tree once, and dreamt about getting that opportunity again ever since.</p>
          </section>
 
      </div>
