--- a/project/authorization_code/public/similartracks.html
+++ b/project/authorization_code/public/similartracks.html
@@ -5,18 +5,21 @@
 <script src="js/controllers/searchController.js"></script>
 <script src="//code.angularjs.org/snapshot/angular-animate.js"></script>
 
-<noscript>
-    <link rel="stylesheet" href="css/skel.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/style-xlarge.css" />
-</noscript>
+<html>
+<head>
+
+    <link rel="stylesheet" href="/css/similar-style.css" />
+
+</head>
 
 <div ng-app="myApp" ng-controller="myCtrl">
 
 <script src="js/controllers/similartrackCtrl.js"></script>
 
 <body>
+
 	<h1 id="fmresult"></div>
+
 </body>
 
 </div>
