--- a/project/authorization_code/public/index.html
+++ b/project/authorization_code/public/index.html
@@ -222,7 +222,7 @@
 </section>
 </div>
 <ul class="copyright">
-  <li>&copy; Untitled. All rights reserved.</li>
+  <li>&copy; Parrot App. All rights reserved.</li>
   <li>Design: <a href="http://templated.co">TEMPLATED</a></li>
   <li>Images: <a href="http://unsplash.com">Unsplash</a></li>
 </ul>
