--- a/project/authorization_code/public/similartracks.html
+++ b/project/authorization_code/public/similartracks.html
@@ -18,6 +18,18 @@
 
 <body>
 
+    <header id="header">
+        <h1><a href="index.html">Spotify Enhancer</a></h1>
+        <nav id="nav">
+          <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="recentsearch.html">Recent Search</a></li>
+              <li><a href="index.html">Log Out</a></li>
+          </ul>
+        </nav>
+    </header>
+
 	<h1 id="fmresult"></div>
 
 </body>
